<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/view_finder"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/clock_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        android:textIsSelectable="false"
        android:textStyle="bold"
        android:textColor="@color/red_a100"
        android:textSize="20sp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="25dp"
        android:text="@string/timer_zero"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/dir_edittext"
        tools:ignore="LabelFor"
        android:textAlignment="textEnd"
        android:textSize="14sp"
        android:fontFamily="monospace"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/red_a100"
        android:textColor="@color/red_a100"
        android:inputType="textCapCharacters"
        app:layout_constraintEnd_toEndOf="@id/clock_textview"
        app:layout_constraintTop_toBottomOf="@id/clock_textview"
        android:autofillHints="Enter the directory name" />

    <EditText
        android:id="@+id/subdir_edittext"
        tools:ignore="LabelFor"
        android:textAlignment="textEnd"
        android:textSize="14sp"
        android:fontFamily="monospace"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/red_a100"
        android:textColor="@color/red_a100"
        android:inputType="textCapCharacters"
        app:layout_constraintEnd_toEndOf="@id/dir_edittext"
        app:layout_constraintTop_toBottomOf="@id/dir_edittext"
        android:autofillHints="Enter the subdirectory name" />

    <ToggleButton
        android:backgroundTint="@color/red_700"
        android:textColor="@color/white"
        android:id="@+id/start_stop_button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="25dp"
        android:layout_marginStart="-45dp"
        android:elevation="2dp"
        android:textOff="@string/start"
        android:textOn="@string/stop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/vertical_centerline" />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="25dp"
        android:layout_marginStart="25dp"
        android:elevation="2dp"
        android:text="@string/settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/start_stop_button"/>

    <TextView
        android:id="@+id/angle_textview"
        android:fontFamily="monospace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/red_a100"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:text="@string/degree_zero"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/status_textview"
        android:layout_alignParentStart="true"
        android:fontFamily="monospace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="25dp"
        android:textAllCaps="true"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@color/red_a100"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toTopOf="@id/settings_button"
        android:text="" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_centerline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".50" />

</androidx.constraintlayout.widget.ConstraintLayout>